# Engram

./: .gitignore  README.md  engram.yaml  pyproject.toml
Formula/: engram.rb
engram/: __init__.py  cli.py  schema.py  web.py
engram/core/: codebase.py  db.py  diary.py  extractor.py  outcomes.py  proposer.py  scheduler.py  stats.py
examples/support-triage/: engram.yaml  integration.py
